@@ -1,6 +1,4 @@
 DIST guake-0.2.2.tar.gz 495683 RMD160 47d0e3609bea5de20bdb030f96485637efe7acdc SHA1 0b5d5321cd6abb6b2d24e7a9002e115f11fd4410 SHA256 4353548f3ffaf892b293fc3c9a9426606b7cc0bdcd5be6752c92f8280dabc66e
-DIST guake-9999.tar.bz2 0 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 SHA1 da39a3ee5e6b4b0d3255bfef95601890afd80709 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
 EBUILD guake-0.2.2.ebuild 483 RMD160 2e097715cc938409627006de4be5e1b4c459ec93 SHA1 0ae5473e4bad2dcb782a5a84ed5c05182e46db66 SHA256 01c9e0fde5082b8d77c3d5bd47ba7e22df47b4f37a61b411a407b94cb764428a
-EBUILD guake-9999.ebuild 566 RMD160 98a9894d0992eae82730a79df259233ef64faef6 SHA1 c25efb6c081c3b25fd81747bcd6575386158ed1b SHA256 c3a32007d34de0d325a29b97525688f76ec5b50821b577bbcd5b915b5ee06922
-MISC ChangeLog 254 RMD160 5d8a0533dbb427418a67777d165ed331f9900491 SHA1 5d95c1f980d763bf87a4c07daba474d7492f0e91 SHA256 c86c00db96716650ae27538b207556d2a3ce982891b698701a31068ad23bd570
+MISC ChangeLog 351 RMD160 e5cfbbcbaefc1db12cede2cb286cbb0193938376 SHA1 f4f784c4a2008b28250196a8ad0838b5d411049b SHA256 d8816578840a8055d4809a2467dcb37c44db5179365a504fd0f09b0d30fa76aa
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
